feat: customer personalization section

--- a/src/css/_about.sass
+++ b/src/css/_about.sass
@@ -23,13 +23,13 @@
                 position: relative
 
                 &:hover 
-                    .video-wrapper
+                    .zoom-wrapper
                         width: 450px
                     
                     .texts
                         width: calc(100% - 450px - 30px)
 
-                .video-wrapper
+                .zoom-wrapper
                     width: 300px
                     margin-right: 30px
                     transition-duration: $transition-duration
@@ -83,7 +83,7 @@
                     align-items: center
                     padding-bottom: 150px
 
-                    .video-wrapper
+                    .zoom-wrapper
                         width: 60%
                         margin-right: 0
                     
@@ -100,7 +100,7 @@
                         transform: translateX(50%)
 
                     &:hover
-                        .video-wrapper
+                        .zoom-wrapper
                             width: 80%
                         
                         .texts
@@ -113,7 +113,7 @@
                 .content
                     padding-bottom: 90px
 
-                    .video-wrapper
+                    .zoom-wrapper
                         width: 80%
                     
                     .texts
@@ -129,7 +129,7 @@
                             height: 80px
 
                     &:hover
-                        .video-wrapper
+                        .zoom-wrapper
                             width: 100%
                         
                         .texts
