--- a/src/css/_base.sass
+++ b/src/css/_base.sass
@@ -83,10 +83,10 @@ h1, h2, h3, h4, h5, h6, .title
         hr
             display: none
 
-.video-wrapper
+.zoom-wrapper
     position: relative
 
-    &:hover video
+    &:hover video, &:hover img
         opacity: 1
         filter: blur(0)
 
@@ -106,11 +106,13 @@ h1, h2, h3, h4, h5, h6, .title
             width: 30%
             height: 30%
 
-    video
+    video, img
         width: 100%
         transition-duration: $transition-duration
         opacity: 0.6
         filter: blur(2px)
+
+    
 
 .info-cards-wrapper
     display: grid
@@ -171,3 +173,25 @@ h1, h2, h3, h4, h5, h6, .title
 
         .card
             width: 80%
+
+.grid
+    display: grid
+    grid-template-columns: repeat(3, 1fr)
+    grid-gap: 30px
+
+    .zoom-wrapper
+        padding: 20px
+        transition-duration: $transition-duration
+
+        &:hover
+            padding: 0
+
+    @media screen and (max-width: 1200px)
+        grid-gap: 10px
+
+
+    @media screen and (max-width: 1000px)
+        grid-template-columns: repeat(2, 1fr)
+
+    @media screen and (max-width: 700px)
+        grid-template-columns: repeat(1, 1fr)
