--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -90,14 +90,14 @@ h1, h2, h3, h4, h5, h6, .title {
   }
 }
 
-.video-wrapper {
+.zoom-wrapper {
   position: relative;
 }
-.video-wrapper:hover video {
+.zoom-wrapper:hover video, .zoom-wrapper:hover img {
   opacity: 1;
   filter: blur(0);
 }
-.video-wrapper .play-icon {
+.zoom-wrapper .play-icon {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -109,11 +109,11 @@ h1, h2, h3, h4, h5, h6, .title {
   align-items: center;
   justify-content: center;
 }
-.video-wrapper .play-icon img {
+.zoom-wrapper .play-icon img {
   width: 30%;
   height: 30%;
 }
-.video-wrapper video {
+.zoom-wrapper video, .zoom-wrapper img {
   width: 100%;
   transition-duration: 0.6s;
   opacity: 0.6;
@@ -180,6 +180,34 @@ h1, h2, h3, h4, h5, h6, .title {
 @media screen and (max-width: 500px) {
   .info-cards-wrapper .card {
     width: 80%;
+  }
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 30px;
+}
+.grid .zoom-wrapper {
+  padding: 20px;
+  transition-duration: 0.6s;
+}
+.grid .zoom-wrapper:hover {
+  padding: 0;
+}
+@media screen and (max-width: 1200px) {
+  .grid {
+    grid-gap: 10px;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (max-width: 700px) {
+  .grid {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
 
@@ -397,13 +425,13 @@ h1, h2, h3, h4, h5, h6, .title {
   justify-content: flex-start;
   position: relative;
 }
-#about .about-cards .card .content:hover .video-wrapper {
+#about .about-cards .card .content:hover .zoom-wrapper {
   width: 450px;
 }
 #about .about-cards .card .content:hover .texts {
   width: calc(100% - 450px - 30px);
 }
-#about .about-cards .card .content .video-wrapper {
+#about .about-cards .card .content .zoom-wrapper {
   width: 300px;
   margin-right: 30px;
   transition-duration: 0.6s;
@@ -453,7 +481,7 @@ h1, h2, h3, h4, h5, h6, .title {
     align-items: center;
     padding-bottom: 150px;
   }
-  #about .about-cards .card .content .video-wrapper {
+  #about .about-cards .card .content .zoom-wrapper {
     width: 60%;
     margin-right: 0;
   }
@@ -469,7 +497,7 @@ h1, h2, h3, h4, h5, h6, .title {
     right: 50%;
     transform: translateX(50%);
   }
-  #about .about-cards .card .content:hover .video-wrapper {
+  #about .about-cards .card .content:hover .zoom-wrapper {
     width: 80%;
   }
   #about .about-cards .card .content:hover .texts {
@@ -480,7 +508,7 @@ h1, h2, h3, h4, h5, h6, .title {
   #about .about-cards .card .content {
     padding-bottom: 90px;
   }
-  #about .about-cards .card .content .video-wrapper {
+  #about .about-cards .card .content .zoom-wrapper {
     width: 80%;
   }
   #about .about-cards .card .content .texts {
@@ -495,39 +523,11 @@ h1, h2, h3, h4, h5, h6, .title {
   #about .about-cards .card .content .chibis-wrapper .chibi {
     height: 80px;
   }
-  #about .about-cards .card .content:hover .video-wrapper {
+  #about .about-cards .card .content:hover .zoom-wrapper {
     width: 100%;
   }
   #about .about-cards .card .content:hover .texts {
     width: 100%;
-  }
-}
-
-#videos-grid .videos {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 30px;
-}
-#videos-grid .videos .video-wrapper {
-  padding: 20px;
-  transition-duration: 0.6s;
-}
-#videos-grid .videos .video-wrapper:hover {
-  padding: 0;
-}
-@media screen and (max-width: 1200px) {
-  #videos-grid .videos {
-    grid-gap: 10px;
-  }
-}
-@media screen and (max-width: 1000px) {
-  #videos-grid .videos {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-@media screen and (max-width: 700px) {
-  #videos-grid .videos {
-    grid-template-columns: repeat(1, 1fr);
   }
 }
 
