--- a/src/css/_base.sass
+++ b/src/css/_base.sass
@@ -195,3 +195,10 @@ h1, h2, h3, h4, h5, h6, .title
 
     @media screen and (max-width: 700px)
         grid-template-columns: repeat(1, 1fr)
+
+// Overwrite sweetalert2 styles
+.swal2-icon.swal2-icon-show
+    border: none !important
+
+    img
+        width: 80px
