feat (gallery): use Swiper

--- a/src/css/_base.sass
+++ b/src/css/_base.sass
@@ -202,3 +202,13 @@ h1, h2, h3, h4, h5, h6, .title
 
     img
         width: 80px
+
+.debug
+    border: 1px solid red !important
+
+// Overwrite splide styles
+.swiper-button-next, .swiper-button-prev
+    color: rgba($color-a, 0.8) !important
+
+    .swiper-button-disabled
+        color: rgba($color-a, 0.1) !important
