--- a/src/css/_hero.sass
+++ b/src/css/_hero.sass
@@ -1,12 +1,12 @@
 #hero
     margin-top: 80px
 
-    .splide
-        width: 80%
+    .swiper-wrapper
+        width: 100%
         margin: 0 auto
         box-shadow: 0 0 15px -5px $color-c
 
-        li.splide__slide
+        .swiper-slide
             a
                 width: 100%
                 height: auto
