--- a/src/css/_socials.sass
+++ b/src/css/_socials.sass
@@ -11,6 +11,7 @@
     border-top-right-radius: 15px
     border-bottom-right-radius: 15px
     padding: 10px 0
+    z-index: 1
 
     a
         transition-duration: $transition-duration
