--- a/src/css/_models.sass
+++ b/src/css/_models.sass
@@ -68,14 +68,45 @@
 
                     .btn
                         width: calc(100% - 60px)
+        
+    .technicals
+        width: 100%
+        margin-top: 60px
+        margin-bottom: 20px
 
-        @media screen and (max-width: 1200px)
+        .btn
+            margin: 0 auto
+            display: block
+            color: white
+
+            &.active
+                background-color: $color-c
+                color: $color-b
+
+        .list
+            height: 0px
+            overflow: hidden
+            color: white
+            width: 90%
+            max-width: 800px
+            margin: 0 auto
+            margin-top: 40px
+            transition-duration: $transition-duration
+
+            ul
+                line-height: 1.7rem
+                margin-bottom: 50px
+
+    @media screen and (max-width: 1200px)
+        .models-wrapper
             width: 80%
 
-        @media screen and (max-width: 800px)
+    @media screen and (max-width: 800px)
+        .models-wrapper
             width: 100%
 
-        @media screen and (max-width: 800px)
+    @media screen and (max-width: 800px)
+        .models-wrapper
             .card
                 .content
                     flex-direction: column
