feat (form): layout

--- a/src/css/_buttons.sass
+++ b/src/css/_buttons.sass
@@ -18,3 +18,18 @@
 
         &:active
             background: rgba($color-c, 0.5)
+
+    &.submit
+        border-radius: 5px
+        background-color: $color-b
+        box-shadow: 0 0 10px 0px rgba($color-d, 1)
+        border: 2px solid $color-b
+        transition-duration: $transition-duration
+        font-weight: bold
+
+        &:hover
+            background: rgba($color-d, 0.8)
+            color: $color-a
+
+        &:active
+            background: rgba($color-d, 0.5)
