--- a/src/css/styles.sass
+++ b/src/css/styles.sass
@@ -14,7 +14,10 @@
 @import 'models'
 @import 'testimonials'
 @import 'collaborations'
-@import 'socials'
 
 // Footer
 @import 'footer'
+
+// Abs elements 
+@import 'socials'
+@import 'form'
