--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -250,6 +250,21 @@ h1, h2, h3, h4, h5, h6, .title {
 .btn.text:active {
   background: rgba(57, 91, 100, 0.5);
 }
+.btn.submit {
+  border-radius: 5px;
+  background-color: #A5C9CA;
+  box-shadow: 0 0 10px 0px #2c3333;
+  border: 2px solid #A5C9CA;
+  transition-duration: 0.6s;
+  font-weight: bold;
+}
+.btn.submit:hover {
+  background: rgba(44, 51, 51, 0.8);
+  color: #E7F6F2;
+}
+.btn.submit:active {
+  background: rgba(44, 51, 51, 0.5);
+}
 
 ::-webkit-scrollbar {
   width: 8px;
@@ -371,7 +386,7 @@ h1, h2, h3, h4, h5, h6, .title {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 2;
+  z-index: 3;
   background-color: #2C3333;
   display: flex;
   align-items: center;
@@ -753,37 +768,6 @@ h1, h2, h3, h4, h5, h6, .title {
   transform: scale(1.1);
 }
 
-#socials {
-  position: fixed;
-  left: 0;
-  top: 50%;
-  transform: translateY(-50%);
-  background-color: #A5C9CA;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
-  padding: 10px 0;
-  z-index: 1;
-}
-#socials a {
-  transition-duration: 0.6s;
-  opacity: 0.6;
-}
-#socials a:hover {
-  opacity: 1;
-}
-#socials a:hover img {
-  width: 35px;
-}
-#socials a img {
-  transition-duration: 0.6s;
-  width: 20px;
-  padding: 10px;
-}
-
 #footer {
   background-color: rgba(57, 91, 100, 0.5);
   margin-top: 50px;
@@ -852,6 +836,118 @@ h1, h2, h3, h4, h5, h6, .title {
   }
   #footer .content .content-internal .buttom img {
     margin: 10px;
+  }
+}
+
+#socials {
+  position: fixed;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: #A5C9CA;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  padding: 10px 0;
+  z-index: 1;
+}
+#socials a {
+  transition-duration: 0.6s;
+  opacity: 0.6;
+}
+#socials a:hover {
+  opacity: 1;
+}
+#socials a:hover img {
+  width: 35px;
+}
+#socials a img {
+  transition-duration: 0.6s;
+  width: 20px;
+  padding: 10px;
+}
+
+.form-wrapper {
+  transition-duration: 0.6s;
+}
+.form-wrapper form {
+  background-color: #395B64;
+  padding: 10px 20px;
+  border-radius: 10px 0 0;
+  width: 70%;
+  margin: 0 auto;
+  margin-top: 60px;
+  border-radius: 10px;
+  padding-bottom: 30px;
+  text-align: center;
+}
+.form-wrapper form p {
+  color: rgba(231, 246, 242, 0.5);
+}
+.form-wrapper form .inputs {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+.form-wrapper form .inputs label {
+  display: none;
+}
+.form-wrapper form .inputs input {
+  padding: 10px 15px;
+  border-radius: 5px;
+  width: 100%;
+  box-sizing: border-box;
+  transition-duration: 0.6s;
+}
+.form-wrapper form .inputs input[type=email] {
+  border: 2px solid #E7F6F2;
+}
+.form-wrapper form .inputs input[type=email]:focus {
+  opacity: 0.8;
+  background-color: rgba(231, 246, 242, 0);
+  color: #E7F6F2;
+}
+.form-wrapper form .inputs input[type=email]:focus::placeholder {
+  color: rgba(231, 246, 242, 0.5);
+}
+@media screen and (min-width: 650px) {
+  .form-wrapper form .inputs {
+    flex-direction: row;
+    gap: 5px;
+  }
+  .form-wrapper form .inputs input[type=email] {
+    width: 70%;
+  }
+  .form-wrapper form .inputs input[type=submit] {
+    width: 30%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .form-wrapper {
+    position: fixed;
+    bottom: -110px;
+    right: 0;
+    opacity: 0.3;
+    width: 500px;
+    z-index: 2;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    padding-top: 20px;
+    padding-left: 20px;
+  }
+  .form-wrapper form {
+    width: 100%;
+    margin: 0;
+  }
+  .form-wrapper.active {
+    opacity: 1;
+    bottom: 0;
   }
 }
 
