--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -127,6 +127,9 @@ h1, h2, h3, h4, h5, h6, .title {
   margin-top: 30px;
   gap: 30px;
 }
+.info-cards-wrapper.hero {
+  grid-template-columns: repeat(4, 1fr);
+}
 .info-cards-wrapper .card {
   width: calc(100% - 80px);
   margin: 0 auto;
@@ -136,6 +139,14 @@ h1, h2, h3, h4, h5, h6, .title {
   padding-right: 40px;
   display: flex;
   align-items: center;
+}
+.info-cards-wrapper .card.link {
+  cursor: pointer;
+  transition-duration: 0.6s;
+}
+.info-cards-wrapper .card.link:hover {
+  opacity: 0.8;
+  transform: scale(1.05);
 }
 .info-cards-wrapper .card:hover .icon {
   transform: scale(1.15);
@@ -169,17 +180,25 @@ h1, h2, h3, h4, h5, h6, .title {
   margin-top: 10px;
   margin-bottom: 20px;
 }
+@media screen and (max-width: 1250px) {
+  .info-cards-wrapper.hero {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
 @media screen and (max-width: 900px) {
   .info-cards-wrapper {
     grid-template-columns: repeat(1, 1fr);
   }
+  .info-cards-wrapper.hero {
+    grid-template-columns: repeat(1, 1fr);
+  }
   .info-cards-wrapper .card {
-    width: 60%;
+    width: calc(70% - 80px);
   }
 }
 @media screen and (max-width: 500px) {
   .info-cards-wrapper .card {
-    width: 80%;
+    width: calc(90% - 80px);
   }
 }
 
