--- a/src/css/_testimonials.sass
+++ b/src/css/_testimonials.sass
@@ -1,33 +1,25 @@
 #testimonials
     .swiper 
-        height: 300px
+        align-items: center
+
 
     .swiper-slide
-        height: 100%
+        align-content: center
+        justify-content: center
+        height: 130px
 
         .content
             background-color: $color-c
-            margin: 30px
-            padding: 20px
+            margin: auto
+            padding: 10px
             height: 100%
             display: flex
             align-items: center
-            justify-content: flex-start
+            justify-content: center
             flex-direction: column
 
-            p
-                margin: 0
-                padding: 0
-                color: rgba($color-a, 0.6)
-
             img
-                border-radius: 50%
-                margin: 0
-                width: 100px
-
-            h3
-                font-size: 1.4rem
-                margin: 15px 0
+                width: 100%
 
             @media screen and (max-width: 900px)
                 margin: 10px
