--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -719,34 +719,25 @@ h1, h2, h3, h4, h5, h6, .title {
 }
 
 #testimonials .swiper {
-  height: 300px;
+  align-items: center;
 }
 #testimonials .swiper-slide {
-  height: 100%;
+  align-content: center;
+  justify-content: center;
+  height: 130px;
 }
 #testimonials .swiper-slide .content {
   background-color: #395B64;
-  margin: 30px;
-  padding: 20px;
+  margin: auto;
+  padding: 10px;
   height: 100%;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   flex-direction: column;
 }
-#testimonials .swiper-slide .content p {
-  margin: 0;
-  padding: 0;
-  color: rgba(231, 246, 242, 0.6);
-}
 #testimonials .swiper-slide .content img {
-  border-radius: 50%;
-  margin: 0;
-  width: 100px;
-}
-#testimonials .swiper-slide .content h3 {
-  font-size: 1.4rem;
-  margin: 15px 0;
+  width: 100%;
 }
 @media screen and (max-width: 900px) {
   #testimonials .swiper-slide .content {
@@ -787,6 +778,26 @@ h1, h2, h3, h4, h5, h6, .title {
 #collaborations .content:hover {
   opacity: 0.8;
   transform: scale(1.1);
+}
+
+.image-viewer {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.image-viewer.hidden {
+  display: none;
+}
+.image-viewer img {
+  width: 90%;
+  max-height: 100%;
 }
 
 #footer {
