--- a/src/css/_testimonials.sass
+++ b/src/css/_testimonials.sass
@@ -25,6 +25,14 @@
                 margin: 10px
                 padding: 10px
 
+    .btn-wrapper
+        display: flex
+        align-items: center
+        justify-content: center
+        
+        .btn
+            margin-top: 50px
+
     @media screen and (max-width:1300px)
         .swiper .swiper-slide .content
             margin: 10px
