feat (hero): video added

--- a/src/css/_hero.sass
+++ b/src/css/_hero.sass
@@ -13,6 +13,11 @@
             img
                 width: 100%
 
+    video
+        width: 100%
+        height: auto
+        margin-top: 100px
+
     @media screen and (max-width: 900px)
         .splide
             width: 100%
