--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -448,6 +448,11 @@ h1, h2, h3, h4, h5, h6, .title {
 #hero .swiper-wrapper .swiper-slide img {
   width: 100%;
 }
+#hero video {
+  width: 100%;
+  height: auto;
+  margin-top: 100px;
+}
 @media screen and (max-width: 900px) {
   #hero .splide {
     width: 100%;
