--- a/src/css/_base.sass
+++ b/src/css/_base.sass
@@ -120,6 +120,7 @@ h1, h2, h3, h4, h5, h6, .title
     width: 100%
     margin-top: 30px
     gap: 30px
+    text-transform: capitalize
 
     &.hero
         grid-template-columns: repeat(4, 1fr)
