--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -126,6 +126,7 @@ h1, h2, h3, h4, h5, h6, .title {
   width: 100%;
   margin-top: 30px;
   gap: 30px;
+  text-transform: capitalize;
 }
 .info-cards-wrapper.hero {
   grid-template-columns: repeat(4, 1fr);
