--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -434,6 +434,48 @@ h1, h2, h3, h4, h5, h6, .title {
   }
 }
 
+.notifications {
+  margin-top: 50px;
+  background-color: #A5C9CA;
+}
+.notifications a {
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  padding: 15px 30px;
+  color: #2C3333;
+}
+.notifications a[href] {
+  animation-direction: alternate;
+  animation-duration: 0.5s;
+  animation-fill-mode: both;
+  animation-iteration-count: infinite;
+  animation-name: bouncy;
+  animation-timing-function: ease-in-out;
+}
+.notifications a span {
+  font-weight: bold;
+  background-color: #395B64;
+  color: #E7F6F2;
+  padding: 5px 10px;
+  margin-right: 10px;
+  border-radius: 5px;
+  text-transform: capitalize;
+}
+@media screen and (max-width: 1000px) {
+  .notifications {
+    margin-top: 60px;
+  }
+}
+
+@keyframes bouncy {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.05);
+  }
+}
 #hero {
   margin-top: 80px;
 }
