style (about): mobile responsive

--- a/src/css/_about.sass
+++ b/src/css/_about.sass
@@ -86,9 +86,12 @@
                     .zoom-wrapper
                         width: 60%
                         margin-right: 0
+
+                    .text-wrapper
+                        width: 80%
                     
                     .texts
-                        width: 80%
+                        width: 100%
                         overflow: visible
                         height: auto
 
@@ -97,7 +100,6 @@
 
                     .chibis-wrapper
                         right: 50%
-                        transform: translateX(50%)
 
                     &:hover
                         .zoom-wrapper
