--- a/src/css/_header.sass
+++ b/src/css/_header.sass
@@ -1,17 +1,16 @@
 #header
     
-    position: fixed
-    top: 0
+    position: sticky
+    top: 0px
     left: 0
     width: 100%
     z-index: 2
 
     .bg
         position: absolute
-        top: -10px
         left: 0
         width: 100%
-        height: calc(100% + 10px)
+        height: calc(100%)
         background-color: rgba($color-c, 0.8)
         z-index: -1
         backdrop-filter: blur(4px)
