--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -303,18 +303,17 @@ h1, h2, h3, h4, h5, h6, .title {
 }
 
 #header {
-  position: fixed;
-  top: 0;
+  position: sticky;
+  top: 0px;
   left: 0;
   width: 100%;
   z-index: 2;
 }
 #header .bg {
   position: absolute;
-  top: -10px;
   left: 0;
   width: 100%;
-  height: calc(100% + 10px);
+  height: 100%;
   background-color: rgba(57, 91, 100, 0.8);
   z-index: -1;
   backdrop-filter: blur(4px);
@@ -400,6 +399,25 @@ h1, h2, h3, h4, h5, h6, .title {
   }
 }
 
+.top-bar {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.top-bar a {
+  margin: 0 10px;
+  padding: 5px 20px;
+  background-color: rgba(57, 91, 100, 0.8);
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+  text-transform: capitalize;
+  transition-duration: 0.6s;
+}
+.top-bar a:hover {
+  background-color: rgba(165, 201, 202, 0.8);
+  color: #2C3333;
+}
+
 #loading {
   position: fixed;
   top: 0;
@@ -435,7 +453,6 @@ h1, h2, h3, h4, h5, h6, .title {
 }
 
 .notifications {
-  margin-top: 50px;
   background-color: #A5C9CA;
 }
 .notifications a {
@@ -461,11 +478,6 @@ h1, h2, h3, h4, h5, h6, .title {
   margin-right: 10px;
   border-radius: 5px;
   text-transform: capitalize;
-}
-@media screen and (max-width: 1000px) {
-  .notifications {
-    margin-top: 60px;
-  }
 }
 
 @keyframes bouncy {
