--- a/src/css/_top_bar.sass
+++ b/src/css/_top_bar.sass
@@ -3,7 +3,7 @@
     justify-content: flex-end
     align-items: center
 
-    a
+    button
         margin: 0 10px
         padding: 5px 20px
         background-color: rgba($color-c, 0.8)
@@ -11,6 +11,8 @@
         border-top-left-radius: 5px
         text-transform: capitalize
         transition-duration: $transition-duration
+        border: none
+        color: $color-a
 
         &:hover
             background-color: rgba($color-b, 0.8)
