--- a/src/css/styles.sass
+++ b/src/css/styles.sass
@@ -10,6 +10,7 @@
 // Main home
 @import 'loading'
 @import 'notifications'
+@import 'countdown'
 @import 'hero'
 @import 'about'
 @import 'colors_options'
