style (form): form always in main flow

--- a/src/css/_countdown.sass
+++ b/src/css/_countdown.sass
@@ -7,6 +7,7 @@
     margin: 15px 0px
 
     h2
+        margin: 0px
         margin-bottom: 10px
 
     p, small
@@ -20,7 +21,6 @@
         background-color: $color-b
         padding: 0px 10px
         margin: 0px 30px
-        margin-top: 0px
 
         p
             display: inline-block
