--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -503,6 +503,7 @@ h1, h2, h3, h4, h5, h6, .title {
   margin: 15px 0px;
 }
 .countdown h2 {
+  margin: 0px;
   margin-bottom: 10px;
 }
 .countdown p, .countdown small {
@@ -516,7 +517,6 @@ h1, h2, h3, h4, h5, h6, .title {
   background-color: #A5C9CA;
   padding: 0px 10px;
   margin: 0px 30px;
-  margin-top: 0px;
 }
 .countdown .counters p {
   display: inline-block;
@@ -1023,6 +1023,8 @@ h1, h2, h3, h4, h5, h6, .title {
 
 .form-wrapper {
   transition-duration: 0.6s;
+  max-width: 700px;
+  margin: 0 auto;
 }
 .form-wrapper form {
   background-color: #395B64;
@@ -1076,29 +1078,6 @@ h1, h2, h3, h4, h5, h6, .title {
   }
   .form-wrapper form .inputs input[type=submit] {
     width: 30%;
-  }
-}
-@media screen and (min-width: 768px) {
-  .form-wrapper {
-    position: fixed;
-    bottom: -110px;
-    right: 0;
-    opacity: 0.8;
-    width: 500px;
-    z-index: 2;
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
-    padding-top: 20px;
-    padding-left: 20px;
-  }
-  .form-wrapper form {
-    width: 100%;
-    margin: 0;
-  }
-  .form-wrapper.active {
-    opacity: 1;
-    bottom: 0;
   }
 }
 
