feat (countdown): update content when counter its 0

--- a/src/css/_countdown.sass
+++ b/src/css/_countdown.sass
@@ -8,7 +8,6 @@
 
     h2
         margin: 0px
-        margin-bottom: 10px
 
     p, small
         color: $color-a
@@ -20,7 +19,7 @@
         justify-content: center
         background-color: $color-b
         padding: 0px 10px
-        margin: 0px 30px
+        margin: 20px 0
 
         p
             display: inline-block
