feat (buy_form): show and ide form with redux

--- a/src/css/_buttons.sass
+++ b/src/css/_buttons.sass
@@ -3,6 +3,8 @@
     cursor: pointer
     background: none
     border: none
+    font-size: 1rem
+    font-family: 'Overpass', sans-serif
 
     &.text
         padding: 15px 30px
