--- a/src/css/_countdown.sass
+++ b/src/css/_countdown.sass
@@ -36,6 +36,9 @@
                 font-size: 50px
                 margin: 5px
                 text-align: right
+
+    .btn
+        text-transform: uppercase
     
 
 
