feat (buy-form): move between screens

--- a/src/css/_buttons.sass
+++ b/src/css/_buttons.sass
@@ -35,3 +35,17 @@
 
         &:active
             background: rgba($color-d, 0.5)
+
+    &.form-btn
+        padding: 10px 20px
+        border-radius: 5px
+        transition-duration: $transition-duration
+        box-shadow: 0 0 0px 0px rgba($color-a, 0)
+        background: $color-c
+
+        &:hover
+            background-color: $color-d
+            box-shadow: 0 0 10px 0px rgba($color-b, 0.5)
+
+        &:active
+            background: rgba($color-c, 0.5)
