--- a/src/css/_buttons.sass
+++ b/src/css/_buttons.sass
@@ -42,6 +42,12 @@
         transition-duration: $transition-duration
         box-shadow: 0 0 0px 0px rgba($color-a, 0)
         background: $color-c
+        margin: 10px
+
+        &[disabled]
+            opacity: 0.5
+            cursor: not-allowed
+            pointer-events: none
 
         &:hover
             background-color: $color-d
