--- a/src/css/_buy_form.sass
+++ b/src/css/_buy_form.sass
@@ -20,6 +20,7 @@
     form
         width: calc(90% - 60px)
         height: calc(90% - 100px)
+        max-width: 800px
         background-color: $color-d
         border-radius: 10px
         box-shadow: 4px 4px 10px rgba(black, 0.6)
@@ -51,3 +52,22 @@
                     width: 100%
                     height: 100%
                     transition-duration: 0.3s
+
+        .content
+            height: calc(100% - 100px)
+
+            .login
+                height: 100%
+
+                .logged
+                    height: 100%
+                    display: flex
+                    justify-content: center
+                    align-items: center
+                    flex-direction: column
+
+        .buttons
+            height: 60px
+            display: flex
+            justify-content: flex-end
+            align-items: center
