--- a/src/css/_buy_form.sass
+++ b/src/css/_buy_form.sass
@@ -65,15 +65,23 @@
         .content
             height: calc(100% - 100px)
 
+            input
+                font-size: 1.1rem
+                padding: 15px 30px
+                
             .login
                 height: 100%
 
-                .logged
+                > section
                     height: 100%
                     display: flex
                     justify-content: center
                     align-items: center
                     flex-direction: column
+
+                    .input-wrapper
+                        margin-top: 30px
+
 
         .buttons
             height: 60px
