feat (buy_form): move to next done screens

--- a/src/css/_buy_form.sass
+++ b/src/css/_buy_form.sass
@@ -68,14 +68,14 @@
             height: calc(100% - 100px)
             display: flex
             align-items: center
-            justify-content: space-between
+            justify-content: space-evenly
 
             &.full-width
                 > section
                     width: 100%
 
             .buy-form-preview 
-                width: 50%
+                width: 40%
 
             > section
                 height: 100%
