--- a/src/css/_buy_form.sass
+++ b/src/css/_buy_form.sass
@@ -18,6 +18,9 @@
     &.mobile
         align-items: flex-start
 
+        &.active form
+            margin: 30px 0
+
     &.active
         opacity: 1
         pointer-events: all
@@ -137,6 +140,7 @@
                     h3
                         text-transform: capitalize
                         font-size: 1.5rem
+                        margin-bottom: 5px
 
                     .tag
                         font-size: 0.8rem
@@ -172,3 +176,21 @@
 
                 .buy-form-preview
                     width: 80%
+
+    @media screen and (max-width: 450px)
+        form
+            .content
+                .set
+                    grid-template-columns: 1fr
+                    grid-gap: 10px
+
+                    .set-option
+                        display: flex
+                        justify-content: space-evenly
+                        align-items: center
+
+                        .tag
+                            position: initial
+                            transform: none
+                            margin-top: 5px
+                        
