--- a/src/css/_buy_form.sass
+++ b/src/css/_buy_form.sass
@@ -29,6 +29,12 @@
             margin-top: 0
             opacity: 1
 
+            &.loading
+                opacity: 0
+                pointer-events: all
+                margin-top: 50px
+
+
     form
         width: calc(90% - 60px)
         max-width: 800px
@@ -38,8 +44,10 @@
         padding: 30px 50px
         margin-top: 100px
         opacity: 0
-        transition-duration: 0.3s
         transition-delay: 0.2s
+        position: relative
+        max-height: 1000px
+        transition-duration: 0.2s
 
         .header
             display: flex
@@ -75,6 +83,7 @@
             display: flex
             align-items: center
             justify-content: space-evenly
+            transition-delay: 0.3s
 
             &.full-width
                 > section
@@ -84,13 +93,14 @@
                 width: 40%
 
             > section
-                height: 100%
                 display: flex
                 justify-content: center
                 align-items: center
                 flex-direction: column
                 width: 50%
                 overflow: visible
+                transition-duration: 0.3s
+                height: calc-size(auto)
 
             input
                 font-size: 1.1rem
