--- a/src/css/_buy_form.sass
+++ b/src/css/_buy_form.sass
@@ -162,6 +162,10 @@
                         transform: translate(50%, 50%)
                         padding: 5px 10px
                     
+                    .price
+                        margin-top: 10px
+                        font-size: 1.2rem
+                        color: $color-a
 
 
         .buttons
