--- a/src/css/_buy_form.sass
+++ b/src/css/_buy_form.sass
@@ -136,6 +136,10 @@
                     text-align: center
                     position: relative
 
+                    &.selected
+                        background-color: rgba($color-c, 0.3)
+                        border: 3px solid $color-b
+
                     &:hover
                         background-color: rgba($color-c, 0.5)
                         box-shadow: 2px 2px 15px rgba(black, 0.8)
