feat (buy_form): colors layout

--- a/src/css/_buy_form.sass
+++ b/src/css/_buy_form.sass
@@ -45,8 +45,9 @@
         margin-top: 100px
         opacity: 0
         transition-delay: 0.2s
-        position: relative
         transition-duration: 0.2s
+        position: relative
+        color: $color-a
 
         .header
             display: flex
@@ -176,6 +177,9 @@
                         font-size: 1.2rem
                         color: $color-a
 
+            .customize
+                .colors
+                    width: 100%
 
         .buttons
             margin-top: 30px
