--- a/src/css/styles.sass
+++ b/src/css/styles.sass
@@ -2,10 +2,13 @@
 @import 'base'
 @import 'buttons'
 @import 'scroll_bar'
+@import 'spinner'
 
 // Header
 @import 'header'
 @import 'top_bar'
+@import 'image_viwer'
+@import 'select'
 
 // Main home
 @import 'loading'
@@ -17,8 +20,6 @@
 @import 'models'
 @import 'testimonials'
 @import 'collaborations'
-@import 'image_viwer'
-@import 'spinner'
 
 // Footer
 @import 'footer'
