fix (buy_form/customize): save colors directly in redux

--- a/src/css/_buy_form.sass
+++ b/src/css/_buy_form.sass
@@ -178,6 +178,7 @@
                         color: $color-a
 
             .customize
+                align-items: flex-start
                 .colors
                     width: 100%
 
