--- a/src/css/_select.sass
+++ b/src/css/_select.sass
@@ -1,7 +1,21 @@
+.select-color-wrapper
+    width: 100%
+    display: flex
+    justify-content: space-between
+    align-items: center
+
+    p
+        width: 50%
+
+    .select
+        width: 50%
+
+
 .select
     color: $color-d
-    width: calc(100% - 20px)
-    margin: 10px
+    width: 100%
+    margin: 10px 0
+    margin-left: 0
 
     svg
         fill: $color-d
