--- a/src/css/styles.sass
+++ b/src/css/styles.sass
@@ -3,12 +3,13 @@
 @import 'buttons'
 @import 'scroll_bar'
 @import 'spinner'
+@import 'image_viwer'
+@import 'select'
+@import 'input_image'
 
 // Header
 @import 'header'
 @import 'top_bar'
-@import 'image_viwer'
-@import 'select'
 
 // Main home
 @import 'loading'
