feat (buy_form/cutomize): show only logo input when +1 colors

--- a/src/css/_buy_form.sass
+++ b/src/css/_buy_form.sass
@@ -179,8 +179,17 @@
 
             .customize
                 align-items: flex-start
+
                 .colors
                     width: 100%
+
+                .warning
+                    font-size: 0.8rem
+                    color: rgba($color-a, 0.5)
+                    margin: 0
+                    padding: 0 
+                    margin-left: 20px
+                    margin-bottom: 10px
 
         .buttons
             margin-top: 30px
