--- a/src/css/_input_image.sass
+++ b/src/css/_input_image.sass
@@ -1,6 +1,6 @@
 .input-image
     width: 100%
-    margin-bottom: 20px
+    margin-top: 20px
 
     label
         border: 2px solid $color-b
@@ -9,6 +9,7 @@
         align-items: center
         justify-content: space-evenly
         padding: 5px 0
+        margin: 10px 0
 
         input
             display: none
@@ -21,9 +22,3 @@
             fill: $color-b
             width: 30px
             height: 30px
-
-    .warning
-        color: $color-b
-        font-size: 12px
-        margin-top: 5px
-        margin-left: 20px
