feat (buy_form/prevew): render logos over trackers

--- a/src/css/_base.sass
+++ b/src/css/_base.sass
@@ -22,6 +22,7 @@ body
     background-color: $color-d
     font-family: 'Overpass', sans-serif
     overflow-x: hidden
+    color: $color-a
 
 #root
     overflow-x: hidden
