--- a/src/css/_buy_form.sass
+++ b/src/css/_buy_form.sass
@@ -87,15 +87,7 @@
 
             &.full-width
                 > section
-                    width: 100%
-
-            .buy-form-preview 
-                width: 40%
-                position: relative
-                margin: 20px
-
-                > img
-                    width: 100%
+                    width: 100%               
 
             > section
                 display: flex
@@ -213,6 +205,10 @@
 
                 .buy-form-preview
                     width: 80%
+
+                .customize
+                    .warning
+                        margin-left: 0
 
     @media screen and (max-width: 450px)
         form
