--- a/src/css/styles.sass
+++ b/src/css/styles.sass
@@ -7,6 +7,9 @@
 @import 'select'
 @import 'input_image'
 
+// Buy form modules
+@import 'buy_form_preview'
+
 // Header
 @import 'header'
 @import 'top_bar'
