--- a/src/css/_buy_form_preview.sass
+++ b/src/css/_buy_form_preview.sass
@@ -4,15 +4,17 @@
     margin: 20px
     position: relative
     perspective: 1000px
-    // pointer-events: none
+    pointer-events: none
 
     > img
         width: 100%
-        // pointer-events: none
+        pointer-events: none
 
     .logo-image
         position: absolute
-        opacity: 0.8
+        opacity: 0.7
+        mix-blend-mode: multiply
+
 
     .spinner
         z-index: 2
@@ -23,8 +25,6 @@
         .logo-image
             width: 15%
             height: auto
-            mix-blend-mode: multiply
-            // pointer-events: none
 
             &:nth-child(1)
                 top: 26%
