--- a/src/css/_base.sass
+++ b/src/css/_base.sass
@@ -23,6 +23,7 @@ body
     font-family: 'Overpass', sans-serif
     overflow-x: hidden
     color: $color-a
+    width: 100vw
 
 #root
     overflow-x: hidden
@@ -44,6 +45,7 @@ a, button
 .regular-width
     max-width: $regular-width
     margin: 0 auto
+    width: 100%
 
     @media screen and (max-width: $regular-width-media-query)
         padding: 0 5%
