feat (buy_form/extras): layout and exclude checkboxes

--- a/src/css/styles.sass
+++ b/src/css/styles.sass
@@ -6,6 +6,7 @@
 @import 'image_viwer'
 @import 'select'
 @import 'input_image'
+@import 'input_checkbox'
 
 // Buy form modules
 @import 'buy_form_preview'
