feat (buy_form/extras): valdiate promo code

--- a/src/css/_buy_form.sass
+++ b/src/css/_buy_form.sass
@@ -183,6 +183,18 @@
                     margin-left: 20px
                     margin-bottom: 10px
 
+            .extras-promo
+                .message
+                    position: relative
+
+                    p
+                        font-size: 0.8rem
+                        color: $color-b
+                        margin-left: 10px
+                    
+                    .spinner
+                        margin: 10px
+
         .buttons
             margin-top: 30px
             height: 60px
