--- a/src/css/_spinner.sass
+++ b/src/css/_spinner.sass
@@ -17,6 +17,10 @@
         opacity: 1
         pointer-events: all
 
+    &.small
+        transform: scale(0.5)
+
+
     img
         opacity: 0.3
         width: 100px
